tests/variant_flow/coverage_missing_variant.err.expected
error: at 5:17: [VF-SwitchNotExhaustive] In function 'f', block 'entry': switchEnum on 'Option' does not handle variant 'Some'
   |
 5 |                 switchEnum(o) [None: end]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^
